# aisaac_strategy_2024

./: .gitignore  .gitmodules  README.md
aisaac_communication/: CMakeLists.txt  package.xml
aisaac_communication/include/aisaac_communication/: msg_receiver.hpp
aisaac_communication/src/: msg_receiver.cpp  publisher_member_function.cpp
aisaac_consai_examples/: CMakeLists.txt  README.md  package.xml
aisaac_consai_examples/aisaac_consai_examples/: field_observer.py  referee_parser.py  robot_operator.py
aisaac_consai_examples/launch/: start.launch.py
aisaac_consai_examples/tests/: README.md  test_field_observer.py  test_geometry_tools.py  test_operation.py  test_robot_operator.py  test_role_assignment.py
aisaac_consai_robot_controller/: CMakeLists.txt  package.xml
aisaac_consai_robot_controller/include/aisaac_consai_robot_controller/: controller_component.hpp  field_info_parser.hpp  grsim_command_converter.hpp
aisaac_consai_robot_controller/launch/: start.launch.py  test.launch.py
aisaac_consai_robot_controller/src/: control_tools.cpp  controller_component.cpp  field_info_parser.cpp  geometry_tools.cpp  grsim_command_converter.cpp
aisaac_consai_robot_controller/test/: control_tools_test.cpp  field_info_parser_test.cpp  obstacle_environment_test.cpp
aisaac_driver/: CMakeLists.txt  package.xml
aisaac_driver/include/System/: accel_limited_control.h  coordinate_system.h  define.h  dribble.h  game_processing.h  kick.h  move.h  pid.h  struct.h  struct_tool.h  temp.h  tools.h
aisaac_driver/launch/: test.launch.py
aisaac_driver/src/: callback.c  pid.c  tools.c
aisaac_manual/launch/: manual.launch.py
aisaac_manual/manual_node/: CMakeLists.txt  package.xml
aisaac_manual/manual_node/include/manual_node/: manual_node.hpp  visibility_control.h
aisaac_manual/manual_node/launch/: manual_node.launch.py
aisaac_manual/manual_node/src/: manual_node.cpp
aisaac_manual/utilities/: CMakeLists.txt  README.md  package.xml
aisaac_manual/utilities/include/utilities/: can_utils.hpp  utilities.hpp  visibility_control.h
aisaac_manual/utilities/src/: utilities.cpp
aisaac_msgs/: CMakeLists.txt  package.xml
aisaac_msgs/msg/: AisaacManualControl.msg  AisaacReferee.msg  AisaacStrategy.msg  AisaacStrategyMsg.msg
aisaac_raspi_relay/: CMakeLists.txt  package.xml
aisaac_raspi_relay/src/: aisaac_raspi_relay.cpp
